第五章纠错

--- a/History of spaced repetition/05.1988 Two component of memory.md
+++ b/History of spaced repetition/05.1988 Two component of memory.md
@@ -68,7 +68,7 @@ We published our ideas with Drs [Janusz Murakowski](https://supermemo.guru/wiki/
 
 ## Robert Bjork's research
 
-## 罗伯特·比约克的研究
+## Robert Bjork 的研究
 
 The concept of the two components of memory has parallels in prior research, esp. by [Bjork](https://supermemo.guru/wiki/Bjork).
 
@@ -76,11 +76,11 @@ The concept of the two components of memory has parallels in prior research, esp
 
 In the 1940s, scientists investigated habit strength and response strength as independent components of behavior in rats. Those concepts were later reformulated in Bjork's disuse theory. Herbert Simon seems to have noticed the [need for memory stability variable in his paper in 1966](https://supermemo.guru/wiki/Herbert_Simon_predicted_two_component_model_of_memory). In 1969, [Robert Bjork](https://supermemo.guru/wiki/Robert_Bjork) formulated the *Strength Paradox*: a reverse relationship between the probability of recall and the memory effect of a review. Note that his is a restatement of the [spacing effect](https://supermemo.guru/wiki/Spacing_effect) in terms of the [two component model](https://supermemo.guru/wiki/Two_component_model), which is just a short step away from formulating the distinction between the variables of memory. This led to [Bjork's New Theory of Disuse (1992)](https://www.researchgate.net/profile/Robert_Bjork/publication/281322665_A_new_theory_of_disuse_and_an_old_theory_of_stimulus_fluctuation/links/58b6f20945851591c5d55e96/A-new-theory-of-disuse-and-an-old-theory-of-stimulus-fluctuation.pdf) that would distinguish between the storage strength and the retrieval strength. Those are close equivalents of [retrievability](https://supermemo.guru/wiki/Retrievability) and [stability](https://supermemo.guru/wiki/Stability) with a slightly different interpretation of the mechanisms that underlie the distinction. Most strikingly, Bjork believes that when [retrievability](https://supermemo.guru/wiki/Retrievability) drops to zero, stable memories are still retained (in our model, stability becomes indeterminate). At the cellular level, Bjork might be right, at least for a while, but practise of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) shows the power of [complete forgetting](https://supermemo.guru/wiki/Complete_forgetting), while, from the neural point of view, retaining memories in disuse would be highly inefficient independent of their [stability](https://supermemo.guru/wiki/Stability). Last but not least, Bjork defines storage strength in terms of connectivity, which is very close to what I believe happens in good students: [coherence](https://supermemo.guru/wiki/Coherence) affects [stability](https://supermemo.guru/wiki/Stability).
 
-在 20 世纪 40 年代，科学家研究了习惯强度和反应强度作为老鼠行为的独立组成部分。这些概念后来在比约克的废用理论中重新表述。赫伯特·西蒙(Herbert Simon)在 1966 年的论文中似乎注意到了记忆稳定性变量的必要性。1969 年，罗伯特·比约克(Robert Bjork)提出了强度悖论：回忆的概率和复习的记忆效果之间存在反向关系。请注意，他的是根据两分量模型对间隔效应的重述，这距离阐明记忆变量之间的区别只有一小步之遥。这引出了比约克(Bjork)的新废用理论(1992)，该理论区分了储存强度和提取强度。这是与可提取性和稳定性相近的等价物，但对作为区别基础的机制的解释略有不同。最引人注目的是，比约克认为，当可提取性降至零时，仍然保留了稳定的记忆(在我们的模型中，稳定性变得不确定)。在细胞层面上，Bjork 可能是对的，至少在一段时间内是正确的，但实践 SuperMemo 显示了完全遗忘的力量，而从神经的角度来看，保留废弃的记忆将是非常低效的，独立于它们的稳定性。最后但并非最不重要的一点是，比约克用连接性来定义存储强度，这与我认为优秀学生身上会发生的事情非常接近：一致性会影响稳定性。
+在 20 世纪 40 年代，科学家研究了习惯强度和反应强度作为老鼠行为的独立组成部分。这些概念后来在 Bjork 的废用理论中重新表述。Herbert Simon 在 1966 年的论文中似乎注意到了记忆稳定性变量的必要性。1969 年，Robert Bjork 提出了强度悖论：回忆的概率和复习的记忆效果之间存在反向关系。请注意，他的是根据两分量模型对间隔效应的重述，这距离阐明记忆变量之间的区别只有一小步之遥。这引出了 Bjork 的新废用理论(1992)，该理论区分了储存强度和提取强度。这是与可提取性和稳定性相近的等价物，但对作为区别基础的机制的解释略有不同。最引人注目的是，Bjork 认为，当可提取性降至零时，仍然保留了稳定的记忆(在我们的模型中，稳定性变得不确定)。在细胞层面上，Bjork 可能是对的，至少在一段时间内是正确的，但实践 SuperMemo 显示了完全遗忘的力量，而从神经的角度来看，保留废弃的记忆将是非常低效的，独立于它们的稳定性。最后但并非最不重要的一点是，比约克用连接性来定义存储强度，这与我认为优秀学生身上会发生的事情非常接近：一致性会影响稳定性。
 
 Why aren't the two components of memory entering mainstream research yet? I claim that if human mind tends to be short-sighted, and we all are, by design, the mind of science can be truly strangulated by strenuous duties, publish or perish, battles for grants, hierarchies, conflict of interest, [peer review](https://supermemo.guru/wiki/Peer_review), teaching obligations, and even the code of conduct. Memory researchers tend to live in a single dimension of "memory strength". In that dimension, they cannot truly appreciate true dynamics of molecular and neural processes that need to be investigated to crack the problem. Ironically, progress may come from those who tend to work in artificial intelligence or neural networks. Prodigious minds of [Demis Hassabis](https://en.wikipedia.org/wiki/Demis_Hassabis) or [Andreas Knoblauch](https://scholar.google.de/citations?user=xVXueeQAAAAJ&hl=en) come up with twin ideas by independent reasoning process, models, and simulations. Biologists will need to listen to the language of mathematics and/or computer science.
 
-为什么记忆的两个组成成分还没有进入主流研究？我认为，如果人类的思维倾向于短视，而我们都是故意的，那么科学的头脑可能真的会被繁重的职责、发表或灭亡、拨款之争、等级制度、利益冲突、同行评议、教学义务，甚至行为准则扼杀。记忆研究人员倾向于生活在“记忆强度”的单一维度中。在这个维度上，他们不能真正理解需要研究以解决问题的分子和神经过程的真实动力学。具有讽刺意味的是，进步可能来自那些倾向于从事人工智能或神经网络工作的人。德米斯·哈萨比斯(Demis Hassabis)或安德烈亚斯·诺布劳赫(Andreas Knoblauch)的惊人头脑通过独立的推理过程、模型和模拟提出了两个想法。生物学家将需要聆听数学和计算机科学的语言。
+为什么记忆的两个组成成分还没有进入主流研究？我认为，如果人类的思维倾向于短视，而我们都是故意的，那么科学的头脑可能真的会被繁重的职责、发表或灭亡、拨款之争、等级制度、利益冲突、同行评议、教学义务，甚至行为准则扼杀。记忆研究人员倾向于生活在“记忆强度”的单一维度中。在这个维度上，他们不能真正理解需要研究以解决问题的分子和神经过程的真实动力学。具有讽刺意味的是，进步可能来自那些倾向于从事人工智能或神经网络工作的人。Demis Hassabis 或 Andreas Knoblauch 的惊人头脑通过独立的推理过程、模型和模拟提出了两个想法。生物学家将需要聆听数学和计算机科学的语言。
 
 ## Two component model in Algorithm SM-17
 
@@ -96,9 +96,9 @@ A graph of actual changes in the value of the two components of memory provides 
 
 [![SuperMemo: Changes in two variables of long-term memory](https://supermemo.guru/images/thumb/5/57/Memory_status.jpg/800px-Memory_status.jpg)](https://supermemo.guru/wiki/File:Memory_status.jpg)
 
-> **Figure:** Changes in memory status over time for an exemplary piece of knowledge. The horizontal axis represents time spanning the entire repetition history. The top panel shows retrievability (tenth power, R10, for easier analysis). Retrievability grid in gray is labelled by R=99%, R=98%, etc. The middle panel displays optimum intervals in navy. Repetition dates are marked by blue vertical lines and labelled in aqua. The end of the optimum interval where R crosses 90% line is marked by red vertical lines (only if intervals are longer than optimum intervals). The bottom panel visualizes stability (presented as ln(S)/ln(days) for easier analysis). The graph shows that retrievability drops fast (exponentially) after early repetitions when stability is low, however, it only drops from 100% to 94% in long 10 years after the 7th review. All values are derived from an actual repetition history and the three component model of memory.
+> **Figure:** Changes in memory status over time for an exemplary piece of knowledge. The horizontal axis represents time spanning the entire repetition history. The top panel shows retrievability (tenth power, $R^{10}$, for easier analysis). Retrievability grid in gray is labelled by R=99%, R=98%, etc. The middle panel displays optimum intervals in navy. Repetition dates are marked by blue vertical lines and labelled in aqua. The end of the optimum interval where R crosses 90% line is marked by red vertical lines (only if intervals are longer than optimum intervals). The bottom panel visualizes stability (presented as $\ln(S)/\ln(days)$ for easier analysis). The graph shows that retrievability drops fast (exponentially) after early repetitions when stability is low, however, it only drops from 100% to 94% in long 10 years after the 7th review. All values are derived from an actual repetition history and the three component model of memory.
 >
-> **图片：**记忆状态随着时间的推移而发生变化。横轴表示跨越整个重复历史的时间。顶部面板显示可提取性(十次幂，R10，便于分析)。灰色网格的可提取性指标分别为 R=99%、R=98% 等。中间深蓝色的面板显示的最佳间隔。重复日期用蓝色竖线标记，并以浅蓝绿色标记。当 R 越过 90% 线时，最佳区间的末端用红色竖线表示(仅当区间大于最佳区间时)。下面板显示稳定性(以ln(S)/ln(days)表示，便于分析)。从图中可以看出，当稳定性较低时，早期重复后的可提取性下降较快(指数级)，但在第 7 次复习后的 10 年时间里，可提取性仅从100%下降到 94%。所有的值都来自一个实际的重复历史和记忆的三组分模型。
+> **图片：**记忆状态随着时间的推移而发生变化。横轴表示跨越整个重复历史的时间。顶部面板显示可提取性(十次幂，$R^{10}$，便于分析)。灰色网格的可提取性指标分别为 R=99%、R=98% 等。中间深蓝色的面板显示的最佳间隔。重复日期用蓝色竖线标记，并以浅蓝绿色标记。当 R 越过 90% 线时，最佳区间的末端用红色竖线表示(仅当区间大于最佳区间时)。下面板显示稳定性(以 $\ln(S)/\ln(days)$ 表示，便于分析)。从图中可以看出，当稳定性较低时，早期重复后的可提取性下降较快(指数级)，但在第 7 次复习后的 10 年时间里，可提取性仅从100%下降到 94%。所有的值都来自一个实际的重复历史和记忆的三组分模型。
 
 Due to the fact that a real-life application of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) requires tackling learning material of varying difficulty, the third variable involved in the model is [item difficulty](https://supermemo.guru/wiki/Item_difficulty) (D). Some of the implications of item difficulty have also been discussed in [this article](https://supermemo.guru/wiki/History_of_spaced_repetition). In particular, the impact of composite memories with subcomponents of different memory stability (S).
 
@@ -288,7 +288,7 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 > 4. 在步骤 2 和 3 中，我们已经证明了 $r$ 和 $s$ 是独立的，因为没有函数 $g_1$ 和 $g_2$ 使得 $s=g_1(r)$ 或 $r=g_2(s)$。这显然不意味着没有参数 $x$ 和函数 $y_s$ 和 $y_r$ 使得 $s=y_s(x)$ 和 $r=y_r(x)$。
 >
-> 5. 可以看出，$r$ 和 $s$ 足以计算最佳重复间隔(参见方程式(1)及(2))。让我们首先假设以下两个函数 $f_r$ 和 $f_s$ 在涉及存储器存储的系统中是已知的：$r_i=f_r(S_I)$ 和 $s_i=f_s(s_{i-1})$。在我们的例子中，这些函数具有平凡的形式 $f_r：r_i=s_i$ 和 $f_s：s_i=s_{i-1}*C_2$ (其中 $C_2$ 是等式中的常量。(2)。在这种情况下，变量 $r$ 和 $s$ 足以在任何时刻 $t$ 以最佳重复间隔表示记忆。以下是重复间隔算法，它表明这是正确的：
+> 5. 可以看出，$r$ 和 $s$ 足以计算最佳重复间隔(参见方程式(1)及(2))。让我们首先假设以下两个函数 $f_r$ 和 $f_s$ 在s涉及记忆存储i的系统中是已知的：$r_i=f_r(s_i)$ 和 $s_i=f_s(s_{i-1})$。在我们的例子中，这些函数具有平凡的形式 $f_r：r_i=s_i$ 和 $f_s：s_i=s_{i-1}*C_2$ (其中 $C_2$ 是等式中的常量。(2)。在这种情况下，变量 $r$ 和 $s$ 足以在任何时刻 $t$ 以最佳重复间隔表示记忆。以下是重复间隔算法，它表明这是正确的：
 >
 >    1. 假设变量 $r_i$ 和 $s_i$ 描述第 i 次重复后的记忆状态
 >    2. 时间流逝 $r_i$
@@ -301,11 +301,11 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 > The above reasoning shows that variables *r* and *s* form a sufficient set of independent variables needed to compute the optimum spacing of repetitions. Obviously, using a set of transformation functions of the form *r*’’=Tr(*r*’) and *s*’’=Ts(*s*’), one can conceive an infinite family of variable pairs *r*-*s* that could describe the status of the memory system. A difficult choice remains to choose such a pair *r*-*s* that will most conveniently correspond with molecular phenomena occurring at the level of the synapse.
 >
-> 上述推理表明，变量 r 和 s 形成了计算最佳重复间隔所需的足够的自变量集合。显然，使用形式为 r''=Tr(r') 和 s''=ts(s'') 的一组变换函数，可以设想可以描述存储系统状态的变量对 r-s 的无穷族。一个困难的选择仍然是选择这样一对 r-s，它将最方便地与突触水平上发生的分子现象相对应。
+> 上述推理表明，变量 r 和 s 形成了计算最佳重复间隔所需的足够的自变量集合。显然，使用形式为 r''=Tr(r') 和 s''=ts(s'') 的一组变换函数，可以设想可以描述记忆系统状态的变量对 r-s 的无穷族。一个困难的选择仍然是选择这样一对 r-s，它将最方便地与突触水平上发生的分子现象相对应。
 >
 > The following terminology and interpretation is proposed by the authors in a memory system involving the existence of the *r*-*s* pair of variables: the variable R, retrievability, determines the probability with which a given memory trace can be invoked at a given moment, while the variable S, stability of memory, determines the rate of decline of retrievability as a result of forgetting, and consequently the length of inter-repetition intervals in the optimum spacing of repetitions.
 >
-> 在涉及 r-s 对变量的存储系统中，作者提出了以下术语和解释：变量 R(可提取性)确定在给定时刻可以调用给定记忆轨迹的概率，而变量 S(记忆的稳定性)确定由于遗忘而导致的可提取性下降的速率，从而确定最佳重复间隔中的重复间隔的长度。
+> 在涉及 r-s 对变量的记忆系统中，作者提出了以下术语和解释：变量 R(可提取性)确定在给定时刻可以调用给定记忆轨迹的概率，而变量 S(记忆的稳定性)确定由于遗忘而导致的可提取性下降的速率，从而确定最佳重复间隔中的重复间隔的长度。
 >
 > Assuming the negatively exponential decrease of retrievability, and the interpretation of stability as a reciprocal of the retrievability decay constant, we might conveniently represent the relationship between R and S using the following formula (t denotes time):
 >
@@ -315,7 +315,7 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 > The transformation functions from the pair *r*-*s* used in Steps 1-5 of the reasoning, to the proposed interpretation R-S will look as follows (assuming the definition of the optimum inter-repetition interval as the interval that produces retention of knowledge K=0.95):
 >
-> 从推理的步骤 1-5 中使用的对 r-s 到建议的解释 R-S 的变换函数如下(假设最佳重复间隔的定义为产生知识保持的间隔 K=0.95)：
+> 从推理的步骤 1-5 中使用的 r-s 对到建议的解释 R-S 的变换函数如下(假设最佳重复间隔的定义为产生知识保持的间隔 K=0.95)：
 >
 >   > (4) $S=-s/\ln(K)$
 > >
@@ -344,49 +344,49 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >    > - K - retention of knowledge equal to 0.95 (it is important to notice that the relationship expressed by Eqn. (7) may not be true for retention higher than 0.95 due to the spacing effect resulting from shorter intervals)
 >    > - i - 问题的重复次数
 >    > - t - 从第 i 次重复开始的时间
->    > - $R_i(t)$ - 自第 i 次重复以来经过时间  t 之后的最佳重复间隔的可检索性
+>    > - $R_i(t)$ - 自第 i 次重复以来经过时间  t 之后的最佳重复间隔的可提取性
 >    > - $C_1$ 和 $C_2$ - 来自公式(1)和(2)的常量。
->    > - K-知识保留量等于 0.95(重要的是要注意由公式(7)表示的关系。由于较短间隔产生的间距效应，保留率高于 0.95 的情况可能不成立)
+>    > - K-知识保留量等于 0.95(重要的 是要注意由公式(7)表示的关系。由于较短间隔产生的间距效应，保留率高于 0.95 的情况可能不成立)
 
 ## Two components of memory in SuperMemo
 
 ## SuperMemo 中的记忆的两个组成成分
 
-[SuperMemo](https://supermemo.guru/wiki/SuperMemo) has always been based on the [two component model of memory](https://supermemo.guru/wiki/Two_component_model_of_memory), which emerged in an increasingly explicit form over the last three decades. The constant C2 in Eqn. (2) in Murakowski proof above represents [stability increase](https://supermemo.guru/wiki/Stability_increase). In 2018, stability increase is represented in [SuperMemo](https://supermemo.guru/wiki/SuperMemo) as matrix *SInc[]*. C2 says how much inter-repetition intervals should increase in learning to meet the criteria of admissible level of forgetting. In reality, C2 is not a constant. It depends on a number of factors. Of these, the most important are:
+[SuperMemo](https://supermemo.guru/wiki/SuperMemo) has always been based on the [two component model of memory](https://supermemo.guru/wiki/Two_component_model_of_memory), which emerged in an increasingly explicit form over the last three decades. The constant $C_2$ in Eqn. (2) in Murakowski proof above represents [stability increase](https://supermemo.guru/wiki/Stability_increase). In 2018, stability increase is represented in [SuperMemo](https://supermemo.guru/wiki/SuperMemo) as matrix *SInc[]*. $C_2$ says how much inter-repetition intervals should increase in learning to meet the criteria of admissible level of forgetting. In reality, $C_2$ is not a constant. It depends on a number of factors. Of these, the most important are:
 
-SuperMemo 一直基于记忆的双组分模型，该模型在过去 30 年中以越来越明显的形式出现。等式(2) 中的常数 C2 在 Murakowski 的上述证明中表示稳定性增加。2018 年，稳定性增加在 SuperMemo 中表示为矩阵 SInc[]。C2 说明在学习中应该增加多少重复间隔，才能达到可接受的遗忘水平标准。实际上，C2 不是常数。这取决于许多因素。其中，最重要的是：
+SuperMemo 一直基于记忆的双组分模型，该模型在过去 30 年中以越来越明显的形式出现。等式(2) 中的常数 $C_2$ 在 Murakowski 的上述证明中表示稳定性增加。2018 年，稳定性增加在 SuperMemo 中表示为矩阵 SInc[]。$C_2$ 说明在学习中应该增加多少重复间隔，才能达到可接受的遗忘水平标准。实际上，$C_2$ 不是常数。这取决于许多因素。其中，最重要的是：
 
-- item difficulty (D)(see: [complexity](https://supermemo.guru/wiki/Complexity)): the more difficult the remembered piece of information the smaller the C2 (i.e. difficult material must be reviewed more often)
-- [memory stability](https://supermemo.guru/wiki/Memory_stability) (S): the more lasting/durable the memory, the smaller the C2 value
-- probability of recall ([retrievability](https://supermemo.guru/wiki/Retrievability))(R): the lower the probability of recall, the higher the C2 value (i.e. due to the [spacing effect](https://supermemo.guru/wiki/Spacing_effect), items are remembered better if reviewed with delay)
+- item difficulty (D)(see: [complexity](https://supermemo.guru/wiki/Complexity)): the more difficult the remembered piece of information the smaller the $C_2$ (i.e. difficult material must be reviewed more often)
+- [memory stability](https://supermemo.guru/wiki/Memory_stability) (S): the more lasting/durable the memory, the smaller the $C_2$ value
+- probability of recall ([retrievability](https://supermemo.guru/wiki/Retrievability))(R): the lower the probability of recall, the higher the $C_2$ value (i.e. due to the [spacing effect](https://supermemo.guru/wiki/Spacing_effect), items are remembered better if reviewed with delay)
 
-- 项目难度(D)(参见：复杂性)：记住的信息越难，C2 越小(即必须更频繁地复习困难的材料)
-- [记忆稳定性](https://supermemo.guru/wiki/Memory_stability) (S)：记忆越持久，C2 值越小
-- 回忆概率([可提取性](https://supermemo.guru/wiki/Retrievability))(R)：回忆的概率越低，C2 值越高(即由于[间隔效应](https://supermemo.guru/wiki/Spacing_effect)，如果延迟查看项目，可以更好地记住它们)
+- 项目难度(D)(参见：复杂性)：记住的信息越难，$C_2$ 越小(即必须更频繁地复习困难的材料)
+- [记忆稳定性](https://supermemo.guru/wiki/Memory_stability) (S)：记忆越持久，$C_2$ 值越小
+- 回忆概率([可提取性](https://supermemo.guru/wiki/Retrievability))(R)：回忆的概率越低，$C_2$ 值越高(即由于[间隔效应](https://supermemo.guru/wiki/Spacing_effect)，如果延迟查看项目，可以更好地记住它们)
 
-Due to those multiple dependencies, the precise value of C2 is not easily predictable. SuperMemo solves this and similar optimization problems by using multidimensional matrices to represent multi-argument functions and adjusting the value of those matrices on the basis of measurements made during an actual learning process. The initial values of those matrices are derived from a theoretical model or from previous measurements. The actually used values will, over time, differ slightly from those theoretically predicted or those derived from data of previous students.
+Due to those multiple dependencies, the precise value of $C_2$ is not easily predictable. SuperMemo solves this and similar optimization problems by using multidimensional matrices to represent multi-argument functions and adjusting the value of those matrices on the basis of measurements made during an actual learning process. The initial values of those matrices are derived from a theoretical model or from previous measurements. The actually used values will, over time, differ slightly from those theoretically predicted or those derived from data of previous students.
 
-由于这些多重依赖关系，C2 的精确值不容易预测。SuperMemo 通过使用多维矩阵来表示多自变量函数，并根据在实际学习过程中所做的测量来调整这些矩阵的值，从而解决了这个和类似的优化问题。这些矩阵的初始值是从理论模型或从先前的测量中导出的。随着时间的推移，实际使用的值将与理论预测的值或根据以前学生的数据得出的值略有不同。
+由于这些多重依赖关系，$C_2$ 的精确值不容易预测。SuperMemo 通过使用多维矩阵来表示多自变量函数，并根据在实际学习过程中所做的测量来调整这些矩阵的值，从而解决了这个和类似的优化问题。这些矩阵的初始值是从理论模型或从先前的测量中导出的。随着时间的推移，实际使用的值将与理论预测的值或根据以前学生的数据得出的值略有不同。
 
-For example, if the value of C2 for a given item of a given difficulty with a given memory status produces an inter-repetition interval that is longer than desired (i.e. producing lower than desired level of recall), the value of C2 is reduced accordingly.
+For example, if the value of $C_2$ for a given item of a given difficulty with a given memory status produces an inter-repetition interval that is longer than desired (i.e. producing lower than desired level of recall), the value of $C_2$ is reduced accordingly.
 
-例如，如果给定难度、给定记忆状态的给定项的 C2 值产生的重复间隔比期望的间隔长(即产生的回忆率低于期望的水平)，则 C2 值相应减少。
+例如，如果给定难度、给定记忆状态的给定项的 $C_2$ 值产生的重复间隔比期望的间隔长(即产生的回忆率低于期望的水平)，则 $C_2$ 值相应减少。
 
-Here is the evolution of [stability increase](https://supermemo.guru/wiki/Stability_increase) (constant C2) over years:
+Here is the evolution of [stability increase](https://supermemo.guru/wiki/Stability_increase) (constant $C_2$) over years:
 
-以下是[稳定性增加](https://supermemo.guru/wiki/Stability_increase )(常数 C2)多年来的演变：
+以下是[稳定性增加](https://supermemo.guru/wiki/Stability_increase )(常数 $C_2$)多年来的演变：
 
-- in the paper-and-pencil version of SuperMemo (1985), C2 was indeed (almost) a constant. Set at the average of 1.75 (varying from 1.5 to 2.0 for rounding errors and simplicity), it did not consider [material difficulty](https://supermemo.guru/wiki/Difficulty), [stability](https://supermemo.guru/wiki/Stability) or [retrievability](https://supermemo.guru/wiki/Retrievability) of memories, etc.
-- 在纸笔版本的 SuperMemo(1985) 中，C2 确实(几乎)是一个常数。设置为平均 1.75 (为了舍入误差和简单性，从 1.5 到 2.0 不等)，没有考虑材料难度、稳定性或记忆的可提取性等。
-- in early versions of [SuperMemo for DOS](https://supermemo.guru/wiki/SuperMemo_for_DOS) (1987), C2, named [E-Factor](https://supermemo.guru/wiki/E-Factor), reflected [item difficulty](https://supermemo.guru/wiki/Difficulty) for the first time. It was decreased for bad grades and increased for good grades
-- 在 [SuperMemo for DOS](https://supermemo.guru/wiki/SuperMemo_for_DOS)(1987) 的早期版本中，C2(命名为 E-因子)首次反映了项目难度。成绩不好时降低，成绩好时增加。
-- SuperMemo 4 (1989) did not use C2, but, to compute inter-repetition intervals, it employed optimization matrices for the first time
-- SuperMemo 4(1989) 没有使用 C2，但是为了计算重复间隔，它第一次使用了优化矩阵
-- in [SuperMemo 5](https://supermemo.guru/wiki/SuperMemo_5) (1990), C2, named [O-Factor](https://supermemo.guru/wiki/O-Factor) was finally represented as a matrix and it included both the [difficulty](https://supermemo.guru/wiki/Difficulty) dimension as well as the [stability](https://supermemo.guru/wiki/Stability) dimension. Again, entries of the matrix would be subject to the measure-verify-correct cycle that would, starting with the initial value based on prior measurements, produce a convergence towards the value that would satisfy the learning criteria
-- 在 [SuperMemo 5](https://supermemo.guru/wiki/SuperMemo_5) (1990) 中，C2 (命名为 O-因子)最终被表示为一个矩阵，它既包括难度维度，也包括稳定性维度。同样，矩阵的条目将受到测量-验证-校正循环的影响，该循环将从基于先前测量的初始值开始，产生向满足学习标准的值的收敛
-- in [SuperMemo 6](https://supermemo.guru/wiki/SuperMemo_6) (1991), C2, in the form of the [O-Factor matrix](https://supermemo.guru/wiki/O-Factor_matrix) would be derived from a three-dimensional matrix that would include the [retrievability](https://supermemo.guru/wiki/Retrievability) dimension. The important implication of the third dimension was that, for the first time, [SuperMemo](https://supermemo.guru/wiki/SuperMemo) would make it possible to inspect [forgetting curves](https://supermemo.guru/wiki/Forgetting_curve) for different levels of [difficulty](https://supermemo.guru/wiki/Difficulty) and [memory stability](https://supermemo.guru/wiki/Stability)
-- 在 [SuperMemo 6](https://supermemo.guru/wiki/SuperMemo_6)(1991) 中，C2 以 [O-因子矩阵](https://supermemo.guru/wiki/O-Factor_matrix)的形式派生自一个包含可提取性维度的三维矩阵。第三维度的重要意义是，[SuperMemo](https://supermemo.guru/wiki/SuperMemo) 第一次使检查不同难度和记忆稳定性的遗忘曲线成为可能
-- in [SuperMemo 8](https://supermemo.guru/wiki/SuperMemo_8) (1997) through [SuperMemo 16](http://www.super-memo.com/supermemo16.html), the representation of C2 would not change much, however, the algorithm used to produce a quick and stable transition from the theoretical to the real set of data would gradually get more and more complex. Most importantly, new SuperMemos make a better use of the [retrievability](https://supermemo.guru/wiki/Retrievability) dimension of C2. Thus, independent of the [spacing effect](https://supermemo.guru/wiki/Spacing_effect), the student can depart from the initial learning criteria, e.g. to cram before an exam, without introducing noise into the optimization procedure
-- 在[SuperMemo 8](https://supermemo.guru/wiki/SuperMemo_8)(1997) 到 [SuperMemo 16](http://www.super-memo.com/supermemo16.html) 中，C2 的表示没有有太大变化，但是，用于产生从理论数据到真实数据的快速而稳定的转换的算法将逐渐变得越来越复杂。最重要的是，新的 SuperMemo 更好地利用了 C2 的可提取性性维度。因此，与间隔效应无关，学生可以偏离初始学习标准，例如在考试前临时抱佛脚，而不会在优化过程中引入噪声
-- in [SuperMemo 17](https://supermemo.guru/wiki/SuperMemo_17) (2016), C2 finally took the form based on the original [two component model of memory](https://supermemo.guru/wiki/Two_component_model_of_memory). It is taken from [stability increase](https://supermemo.guru/wiki/Stability_increase) matrix (SInc) that has three dimensions that represent the three variables that determine the increase in stability: [complexity](https://supermemo.guru/wiki/Complexity), [stability](https://supermemo.guru/wiki/Stability) and [retrievability](https://supermemo.guru/wiki/Retrievability). The SInc matrix is filled up with data during learning using a complex algorithm known as [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17). The stability increase matrix can be inspected in SuperMemo 17 with **Tools : Memory : 4D Graphs** (**Stability** tab)
-- 在 [SuperMemo 17](https://supermemo.guru/wiki/SuperMemo_17) (2016) 中，C2 最终采取了基于最初的记忆双组分模型的形式。它取自稳定性增加矩阵(SINC)，该矩阵具有三个维度，表示决定稳定性增加的三个变量：复杂性、稳定性和可提取性。在使用称为算法 SM-17 的复杂算法学习期间用数据填充 SINC 矩阵。可使用 **Tools：Memory：4D Graphs** (**稳定性** 选项卡)在 SuperMemo 17 中检查稳定性增加矩阵。
+- in the paper-and-pencil version of SuperMemo (1985), $C_2$ was indeed (almost) a constant. Set at the average of 1.75 (varying from 1.5 to 2.0 for rounding errors and simplicity), it did not consider [material difficulty](https://supermemo.guru/wiki/Difficulty), [stability](https://supermemo.guru/wiki/Stability) or [retrievability](https://supermemo.guru/wiki/Retrievability) of memories, etc.
+- 在纸笔版本的 SuperMemo(1985) 中，$C_2$ 确实(几乎)是一个常数。设置为平均 1.75 (为了舍入误差和简单性，从 1.5 到 2.0 不等)，没有考虑材料难度、稳定性或记忆的可提取性等。
+- in early versions of [SuperMemo for DOS](https://supermemo.guru/wiki/SuperMemo_for_DOS) (1987), $C_2$, named [E-Factor](https://supermemo.guru/wiki/E-Factor), reflected [item difficulty](https://supermemo.guru/wiki/Difficulty) for the first time. It was decreased for bad grades and increased for good grades
+- 在 [SuperMemo for DOS](https://supermemo.guru/wiki/SuperMemo_for_DOS)(1987) 的早期版本中，$C_2$ (命名为 E-因子)首次反映了项目难度。成绩不好时降低，成绩好时增加。
+- SuperMemo 4 (1989) did not use $C_2$, but, to compute inter-repetition intervals, it employed optimization matrices for the first time
+- SuperMemo 4(1989) 没有使用 $C_2$，但是为了计算重复间隔，它第一次使用了优化矩阵
+- in [SuperMemo 5](https://supermemo.guru/wiki/SuperMemo_5) (1990), $C_2$, named [O-Factor](https://supermemo.guru/wiki/O-Factor) was finally represented as a matrix and it included both the [difficulty](https://supermemo.guru/wiki/Difficulty) dimension as well as the [stability](https://supermemo.guru/wiki/Stability) dimension. Again, entries of the matrix would be subject to the measure-verify-correct cycle that would, starting with the initial value based on prior measurements, produce a convergence towards the value that would satisfy the learning criteria
+- 在 [SuperMemo 5](https://supermemo.guru/wiki/SuperMemo_5) (1990) 中，$C_2$ (命名为 O-因子)最终被表示为一个矩阵，它既包括难度维度，也包括稳定性维度。同样，矩阵的条目将受到测量-验证-校正循环的影响，该循环将从基于先前测量的初始值开始，产生向满足学习标准的值的收敛
+- in [SuperMemo 6](https://supermemo.guru/wiki/SuperMemo_6) (1991), $C_2$ in the form of the [O-Factor matrix](https://supermemo.guru/wiki/O-Factor_matrix) would be derived from a three-dimensional matrix that would include the [retrievability](https://supermemo.guru/wiki/Retrievability) dimension. The important implication of the third dimension was that, for the first time, [SuperMemo](https://supermemo.guru/wiki/SuperMemo) would make it possible to inspect [forgetting curves](https://supermemo.guru/wiki/Forgetting_curve) for different levels of [difficulty](https://supermemo.guru/wiki/Difficulty) and [memory stability](https://supermemo.guru/wiki/Stability)
+- 在 [SuperMemo 6](https://supermemo.guru/wiki/SuperMemo_6)(1991) 中，$C_2$ 以 [O-因子矩阵](https://supermemo.guru/wiki/O-Factor_matrix)的形式派生自一个包含可提取性维度的三维矩阵。第三维度的重要意义是，[SuperMemo](https://supermemo.guru/wiki/SuperMemo) 第一次使检查不同难度和记忆稳定性的遗忘曲线成为可能
+- in [SuperMemo 8](https://supermemo.guru/wiki/SuperMemo_8) (1997) through [SuperMemo 16](http://www.super-memo.com/supermemo16.html), the representation of $C_2$ would not change much, however, the algorithm used to produce a quick and stable transition from the theoretical to the real set of data would gradually get more and more complex. Most importantly, new SuperMemos make a better use of the [retrievability](https://supermemo.guru/wiki/Retrievability) dimension of $C_2$. Thus, independent of the [spacing effect](https://supermemo.guru/wiki/Spacing_effect), the student can depart from the initial learning criteria, e.g. to cram before an exam, without introducing noise into the optimization procedure
+- 在[SuperMemo 8](https://supermemo.guru/wiki/SuperMemo_8)(1997) 到 [SuperMemo 16](http://www.super-memo.com/supermemo16.html) 中，$C_2$ 的表示没有有太大变化，但是，用于产生从理论数据到真实数据的快速而稳定的转换的算法将逐渐变得越来越复杂。最重要的是，新的 SuperMemo 更好地利用了 $C_2$ 的可提取性性维度。因此，与间隔效应无关，学生可以偏离初始学习标准，例如在考试前临时抱佛脚，而不会在优化过程中引入噪声
+- in [SuperMemo 17](https://supermemo.guru/wiki/SuperMemo_17) (2016), $C_2$ finally took the form based on the original [two component model of memory](https://supermemo.guru/wiki/Two_component_model_of_memory). It is taken from [stability increase](https://supermemo.guru/wiki/Stability_increase) matrix (SInc) that has three dimensions that represent the three variables that determine the increase in stability: [complexity](https://supermemo.guru/wiki/Complexity), [stability](https://supermemo.guru/wiki/Stability) and [retrievability](https://supermemo.guru/wiki/Retrievability). The SInc matrix is filled up with data during learning using a complex algorithm known as [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17). The stability increase matrix can be inspected in SuperMemo 17 with **Tools : Memory : 4D Graphs** (**Stability** tab)
+- 在 [SuperMemo 17](https://supermemo.guru/wiki/SuperMemo_17) (2016) 中，$C_2$ 最终采取了基于最初的记忆双组分模型的形式。它取自稳定性增加矩阵(SINC)，该矩阵具有三个维度，表示决定稳定性增加的三个变量：复杂性、稳定性和可提取性。在使用称为算法 SM-17 的复杂算法学习期间用数据填充 SINC 矩阵。可使用 **Tools：Memory：4D Graphs** (**稳定性** 选项卡)在 SuperMemo 17 中检查稳定性增加矩阵。
