--- a/History of spaced repetition/05.1988 Two component of memory.md
+++ b/History of spaced repetition/05.1988 Two component of memory.md
@@ -76,7 +76,7 @@ The concept of the two components of memory has parallels in prior research, esp
 
 In the 1940s, scientists investigated habit strength and response strength as independent components of behavior in rats. Those concepts were later reformulated in Bjork's disuse theory. Herbert Simon seems to have noticed the [need for memory stability variable in his paper in 1966](https://supermemo.guru/wiki/Herbert_Simon_predicted_two_component_model_of_memory). In 1969, [Robert Bjork](https://supermemo.guru/wiki/Robert_Bjork) formulated the *Strength Paradox*: a reverse relationship between the probability of recall and the memory effect of a review. Note that his is a restatement of the [spacing effect](https://supermemo.guru/wiki/Spacing_effect) in terms of the [two component model](https://supermemo.guru/wiki/Two_component_model), which is just a short step away from formulating the distinction between the variables of memory. This led to [Bjork's New Theory of Disuse (1992)](https://www.researchgate.net/profile/Robert_Bjork/publication/281322665_A_new_theory_of_disuse_and_an_old_theory_of_stimulus_fluctuation/links/58b6f20945851591c5d55e96/A-new-theory-of-disuse-and-an-old-theory-of-stimulus-fluctuation.pdf) that would distinguish between the storage strength and the retrieval strength. Those are close equivalents of [retrievability](https://supermemo.guru/wiki/Retrievability) and [stability](https://supermemo.guru/wiki/Stability) with a slightly different interpretation of the mechanisms that underlie the distinction. Most strikingly, Bjork believes that when [retrievability](https://supermemo.guru/wiki/Retrievability) drops to zero, stable memories are still retained (in our model, stability becomes indeterminate). At the cellular level, Bjork might be right, at least for a while, but practise of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) shows the power of [complete forgetting](https://supermemo.guru/wiki/Complete_forgetting), while, from the neural point of view, retaining memories in disuse would be highly inefficient independent of their [stability](https://supermemo.guru/wiki/Stability). Last but not least, Bjork defines storage strength in terms of connectivity, which is very close to what I believe happens in good students: [coherence](https://supermemo.guru/wiki/Coherence) affects [stability](https://supermemo.guru/wiki/Stability).
 
-在 20 世纪 40 年代，科学家研究了习惯强度和反应强度作为老鼠行为的独立组成部分。这些概念后来在 Bjork 的废用理论中重新表述。Herbert Simon 在 1966 年的论文中似乎注意到了记忆稳定性变量的必要性。1969 年，Robert Bjork 提出了强度悖论：回忆的概率和复习的记忆效果之间存在反向关系。请注意，他的是根据两分量模型对间隔效应的重述，这距离阐明记忆变量之间的区别只有一小步之遥。这引出了 Bjork 的新废用理论(1992)，该理论区分了储存强度和提取强度。这是与可提取性和稳定性相近的等价物，但对作为区别基础的机制的解释略有不同。最引人注目的是，Bjork 认为，当可提取性降至零时，仍然保留了稳定的记忆(在我们的模型中，稳定性变得不确定)。在细胞层面上，Bjork 可能是对的，至少在一段时间内是正确的，但实践 SuperMemo 显示了完全遗忘的力量，而从神经的角度来看，保留废弃的记忆将是非常低效的，独立于它们的稳定性。最后但并非最不重要的一点是，比约克用连接性来定义存储强度，这与我认为优秀学生身上会发生的事情非常接近：一致性会影响稳定性。
+在 20 世纪 40 年代，科学家研究了习惯强度和反应强度作为老鼠行为的独立组成部分。这些概念后来在 Bjork 的废用理论中重新表述。Herbert Simon 在 1966 年的论文中似乎注意到了记忆稳定性变量的必要性。1969 年，Robert Bjork 提出了强度悖论：回忆的概率和复习的记忆效果之间存在反向关系。请注意，他的是根据两分量模型对间隔效应的重述，这距离阐明记忆变量之间的区别只有一小步之遥。这引出了 Bjork 的新废用理论(1992)，该理论区分了储存强度和提取强度。这是与可提取性和稳定性相近的等价物，但对作为区别基础的机制的解释略有不同。最引人注目的是，Bjork 认为，当可提取性降至零时，仍然保留了稳定的记忆(在我们的模型中，稳定性变得不确定)。在细胞层面上，Bjork 可能是对的，至少在一段时间内是正确的，但实践 SuperMemo 显示了完全遗忘的力量，而从神经的角度来看，保留废弃的记忆将是非常低效的，独立于它们的稳定性。最后但并非最不重要的一点是，Bjork 用连接性来定义存储强度，这与我认为优秀学生身上会发生的事情非常接近：一致性会影响稳定性。
 
 Why aren't the two components of memory entering mainstream research yet? I claim that if human mind tends to be short-sighted, and we all are, by design, the mind of science can be truly strangulated by strenuous duties, publish or perish, battles for grants, hierarchies, conflict of interest, [peer review](https://supermemo.guru/wiki/Peer_review), teaching obligations, and even the code of conduct. Memory researchers tend to live in a single dimension of "memory strength". In that dimension, they cannot truly appreciate true dynamics of molecular and neural processes that need to be investigated to crack the problem. Ironically, progress may come from those who tend to work in artificial intelligence or neural networks. Prodigious minds of [Demis Hassabis](https://en.wikipedia.org/wiki/Demis_Hassabis) or [Andreas Knoblauch](https://scholar.google.de/citations?user=xVXueeQAAAAJ&hl=en) come up with twin ideas by independent reasoning process, models, and simulations. Biologists will need to listen to the language of mathematics and/or computer science.
 
@@ -102,7 +102,7 @@ A graph of actual changes in the value of the two components of memory provides 
 
 Due to the fact that a real-life application of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) requires tackling learning material of varying difficulty, the third variable involved in the model is [item difficulty](https://supermemo.guru/wiki/Item_difficulty) (D). Some of the implications of item difficulty have also been discussed in [this article](https://supermemo.guru/wiki/History_of_spaced_repetition). In particular, the impact of composite memories with subcomponents of different memory stability (S).
 
-因为一个现实生活中的应用 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 需要解决不同难度的学习材料，模型中所涉及的第三个变[项目难度](https://supermemo.guru/wiki/Item_difficulty) (D)。一些项目难度的影响也一直在这篇[文章](https://supermemo.guru/wiki/History_of_spaced_repetition)被讨论。特别是具有不同子成分的复合记忆对记忆稳定性的影响。
+因为一个现实生活中的应用 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 需要解决不同难度的学习材料，模型中所涉及的第三个变[项目难度](https://supermemo.guru/wiki/Item_difficulty) (D)。项目难度的一些影响也已经在这篇[文章](https://supermemo.guru/wiki/History_of_spaced_repetition)被讨论。特别是具有不同子成分的复合记忆对记忆稳定性的影响。
 
 For the purpose of the new algorithm we have defined the three components of memory as follows:
 
@@ -121,7 +121,7 @@ For the purpose of the new algorithm we have defined the three components of mem
 
 The actual proof from my [Master's Thesis](https://supermemo.guru/wiki/Optimization_of_learning) follows. The language and models are 3 decades old and somewhat inept. However, the core idea still holds water to this day. For a better take on the proof, see [Murakowski proof](https://supermemo.guru/wiki/History_of_spaced_repetition_(print)#Proof_by_Murakowski).
 
-下面是我硕士论文中的实际证明。这些语言和模式已经有 30 年的历史了，而且有些笨拙。然而，核心思想至今仍然站得住脚。要更好地理解证明，请参见 Murakowski 的证明。
+下面是我硕士论文中的实际证明。这些语言和模型已经有 30 年的历史了，而且有些笨拙。然而，核心思想至今仍然站得住脚。要更好地理解证明，请参见 Murakowski 的证明。
 
 > Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use_literal_archives%3F)
 >
@@ -145,56 +145,56 @@ The actual proof from my [Master's Thesis](https://supermemo.guru/wiki/Optimizat
 >
 > - A variable that plays the role of a clock that measures time between repetitions. Exemplary parameters that can be used here are:
 >
->   - Te - time that has elapsed since the last repetition (it belongs to the range <0,optimal-interval>),
->   - Tl - time that has to elapse before the next repetition will take place (Tl=optimal-interval-Te),
->   - Pf - probability that the synapse will lose the trace of memory during the day in question (it belongs to the range <0,1>).
+>   - $T_e$ - time that has elapsed since the last repetition (it belongs to the range <0,optimal-interval>),
+>   - $T_L$ - time that has to elapse before the next repetition will take place ($T_L$=optimal-interval-$T_e$),
+>   - $P_f$ - probability that the synapse will lose the trace of memory during the day in question (it belongs to the range <0,1>).
 > - 起时钟作用的变量，用于测量两次重复之间的时间。这里可以使用的示例性参数包括：
->   -  Te - 自上次重复以来已经过去的时间（属于区间 <0，最佳间隔>），
->   -  Tl - 在下一次重复发生之前必须经过的时间（TL = 最佳间隔 - Te），
->   -  Pf - 突触在有问题的一天内丢失记忆痕迹的概率（属于区间 <0，1>）。
+>   -  $T_e$ - 自上次重复以来已经过去的时间（属于区间 <0，最佳间隔>），
+>   -  $T_L$ - 在下一次重复发生之前必须经过的时间（$T_L$ = 最佳间隔 - $T_e$），
+>   -  $P_f$ - 突触在有问题的一天内丢失记忆痕迹的概率（属于区间 <0，1>）。
 > - A variable that measures the durability of memory. Exemplary parameters that can be used here are:
 >
 >   - I(n+1) - optimal interval that should be used after the next repetition (I(n+1)=I(n)*C where C is a constant greater than three),
 >   - I(n) - current optimal interval,
 >   - n - number of repetitions preceding the moment in question, etc.
 > - 衡量记忆持久性的变量。这里可以使用的示例性参数包括：
->   - I(n+1) - 在下一次重复之后应该使用的最佳间隔（I(n+1)=I(N)*C，其中C是大于3的常数），
+>   - I(n+1) - 在下一次重复之后应该使用的最佳间隔（I(n+1)=I(n)*C，其中 C 是大于 3 的常数），
 >   - I(n) - 现在的最佳间隔
 >   - n - 在回答问题的时刻之前重复的次数等。
 >
 > Let us now see if the above variables are necessary and sufficient to characterize the state of synapses in the process of time-optimal learning. To show that variables are independent, we will show that none of them can be calculated from the other. Let us notice that the I(n) parameter remains constant during a given inter-repetition interval, while the Te parameter changes from zero to I(n). This shows that there is no function f that satisfies the condition:
 >
-> 现在让我们看看上述变量是否充分必要地描述突触在时间最优学习过程中的状态。为了说明变量是相互独立的，我们将说明它们之间没有一个可以相互计算。让我们注意到，在给定的重复间隔内，I(n) 参数保持不变，而 Te 参数从0变为I(n)。这表明没有满足条件的函数 f：
+> 现在让我们看看上述变量是否充分必要地描述突触在时间最优学习过程中的状态。为了说明变量是相互独立的，我们将说明它们之间没有一个可以相互计算。让我们注意到，在给定的重复间隔内，I(n) 参数保持不变，而 $T_e$ 参数从 0 变为 I(n)。这表明没有满足条件的函数 f：
 >
-> > Te=f(I(n))
+> > $T_e=f(I(n))$
 >
 > On the other hand, at the moment of subsequent repetitions, Te always equals zero while I(n) has always a different, increasing value. Therefore there is no function g that satisfies the condition:
 >
 > 另一方面，在随后的重复时刻，Te 总是等于零，而 I(n) 总是有一个不同的、递增的值。因此，不存在满足条件的函数 g：
 >
-> > I(n)=g(Te)
+> > $I(n)=g(T_e)$
 >
 > Hence independence of I(n) and Te.
 >
-> 因此 I(n) 和 Te 是独立的。
+> 因此 I(n) 和 $T_e$ 是独立的。
 >
 > To show that no other variables are necessary in the process of optimal learning, let us notice that at any given time we can compute all the moments of future repetitions using the following algorithm:
 >
 > 为了说明在最优学习过程中不需要其他变量，让我们注意到，在任何给定时间，我们都可以使用下面的算法计算未来重复的所有时刻:
 >
-> 1. Let there elapse I(n)-Te days.
+> 1. Let there elapse I(n)-$T_e$ days.
 > 2. Let there be a repetition.
 > 3. Let Te be zero and I(n) increase C times.
 > 4. Go to 1.
 >
-> 1. 经过 I(N)-Te 天
+> 1. 经过 I(n)-$T_e$ 天
 > 2. 让我们重复一遍。
-> 3. 令 Te 为零，I(n) 增加 C 倍。
+> 3. 令 $T_e$ 为零，I(n) 增加 C 倍。
 > 4. 回到 1。
 >
 > Note that the value of C is a constant characteristic for a given synapse and as such does not change in the process of learning. I will later use the term **retrievability** to refer to the first of the variables and the term **stability** to refer to the second one. To justify the choice of the first term, let me notice that we use to think that memories are strong after a learning task and that they fade away afterwards until they become no longer retrievable. This is retrievability that determines the moment at which memories are no longer there. It is also worth mentioning that retrievability was the variable that was tacitly assumed to be the only one needed to describe memory (as in the calpain model). The invisibility of the stability variable resulted from the fact that researchers concentrated their effort on a single learning task and observation of the follow-up changes in synapses, while the importance of stability can be visualized only in the process of repeating the same task many times. To conclude the analysis of memory variables, let us ask the standard question that must be posed in development of any biological model. What is the possible evolutionary advantage that arises from the existence of two variables of memory?
 >
-> 请注意，对于给定的突触，C的值是一个恒定的特征，因此在学习过程中不会改变。稍后我将使用术语**可提取性**来表示第一个变量，使用术语**稳定性**来表示第二个变量。为了证明第一个学期的选择是合理的，让我注意到，我们过去常常认为记忆在学习任务之后是强烈的，然后它们就会消失，直到它们变得不再可以找回。这是决定记忆何时不再存在的可提取性。还值得一提的是，可提取性是被默认为唯一需要描述记忆的变量(就像在 calain 模型中一样)。稳定性变量的不可见性是因为研究人员将精力集中在单一的学习任务和观察突触的后续变化上，而稳定性的重要性只有在多次重复同一任务的过程中才能可视化。为了总结对记忆变量的分析，让我们提出在开发任何生物模型时必须提出的标准问题。记忆的两个变量的存在可能产生的进化优势是什么？
+> 请注意，对于给定的突触，C 的值是一个恒定的特征，因此在学习过程中不会改变。稍后我将使用术语**可提取性**来表示第一个变量，使用术语**稳定性**来表示第二个变量。为了证明第一个学期的选择是合理的，让我注意到，我们过去常常认为记忆在学习任务之后是强烈的，然后它们就会消失，直到它们变得不再可以找回。这是决定记忆何时不再存在的可提取性。还值得一提的是，可提取性是被默认为唯一需要描述记忆的变量(就像在 calain 模型中一样)。稳定性变量的不可见性是因为研究人员将精力集中在单一的学习任务和观察突触的后续变化上，而稳定性的重要性只有在多次重复同一任务的过程中才能可视化。为了总结对记忆变量的分析，让我们提出在开发任何生物模型时必须提出的标准问题。记忆的两个变量的存在可能产生的进化优势是什么？
 >
 > Retrievability and stability are both necessary to code for a process of learning that allows subsequent inter-repetition intervals to increase in length without forgetting. It can be easily demonstrated that such model of learning is best with respect to the survival rate of an individual if we acknowledge the fact that remembering without forgetting would in a short time clog up the memory system which is a finite one. If memory is to be forgetful it must have a means of retaining these traces that seem to be important for survival. Repetition as a memory strengthening factor is such a means. Let us now consider what is the most suitable timing of the repetitory process. If a given phenomenon is encountered for the n-th time, the probability that it will be encountered for the n+1 time increases and therefore a longer memory retention time seems advantageous. The exact function that describes the best repetitory process depends on the size of memory storage, number of possible phenomena encountered by an individual, and many others. However, the usefulness of increasing intervals required to sustain memory by repetitions is indisputable and so is the evolutionary value of retrievability and stability of memory. One can imagine many situations interfering with this simple picture of the development of memory in the course of evolution. For example, events that were associated with an intense stress should be remembered better. Indeed, this fact was proved in research on the influence of catecholamines on learning. Perhaps, using hormonal stimulation one could improve the performance of a student applying the SuperMemo method.
 >
@@ -231,19 +231,19 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 > 在早期的研究中已经发现，配对联想学习中的最佳重复间隔，理解为需要最小重复次数才能无限期地保持恒定的知识保持水平(例如95%)的间隔，可以用以下公式大致表示([Wozniak 和 Gorzelanczyk，1994](https://supermemo.guru/wiki/Optimization_of_repetition_spacing_in_the_practice_of_learning))：
 >
-> - (1) I1=C1
-> - (2) Ii=Ii-1*C2
+> - (1) $I_1=C_1$
+> - (2) $I_i=I_{i-1}*C_2$
 >
 > where:
 >
 > 这里：
 >
-> - Ii - [inter-repetition interval](https://supermemo.guru/wiki/Optimum_interval) after the i-th repetition
-> - Ii - 第 i 次重复后的重复间隔。
-> - C1 - length of the first interval (dependent on the chosen knowledge [retention](https://supermemo.guru/wiki/Retention), and usually equal to several days)
-> - C1 - 第一个间隔的长度(取决于所选的知识保留，通常等于几天)。
-> - C2 - constant that denotes the increase of inter-repetition intervals in subsequent repetitions (dependent on the chosen knowledge retention, and the [difficulty](https://supermemo.guru/wiki/Difficulty) of the remembered item)
-> - C2 - 常数，表示后续重复中重复间隔的增加(取决于所选的知识记忆和记忆项目的难度)
+> - $I_i$ - [inter-repetition interval](https://supermemo.guru/wiki/Optimum_interval) after the i-th repetition
+> - $C_1$ - length of the first interval (dependent on the chosen knowledge [retention](https://supermemo.guru/wiki/Retention), and usually equal to several days)
+> - $C_2$ - constant that denotes the increase of inter-repetition intervals in subsequent repetitions (dependent on the chosen knowledge retention, and the [difficulty](https://supermemo.guru/wiki/Difficulty) of the remembered item)
+> - $I_i$ - 第 i 次重复后的重复间隔。
+> - $C_1$ - 第一个间隔的长度(取决于所选的知识保留，通常等于几天)。
+> - $C_2$ - 常数，表示后续重复中重复间隔的增加(取决于所选的知识记忆和记忆项目的难度)
 >
 > The above formulae have been found for human subjects using computer optimization procedures employed to supervise the process of self-paced learning of word-pairs using the active recall drop-out technique. [...]
 >
@@ -276,9 +276,9 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >    7. goto 2
 >
 >
-> 1. 我们想要确定存储记忆痕迹所涉及的(分子)变量集，这些变量足以说明最佳重复间隔。首先，让我们假设这些变量在学习中的两个相关性，它们受制于等式所表示的最佳间距。(1)及(2)：
+> 1. 我们想要确定存储记忆痕迹所涉及的(分子)变量集，这些变量足以说明最佳重复间隔。首先，让我们假设这些变量在学习中的两个相关性，它们受制于公式(1)及(2)所表示的最佳间距：
 >
->       		r - 从当前时刻到当前最佳间隔结束的剩余时间(最佳间隔是指保留率在结束时降至先前定义的水平的间隔，例如95%)。
+>       		r - 从当前时刻到当前最佳间隔结束的剩余时间(最佳间隔是指保留率在结束时降至先前定义的水平的间隔，例如 95%)。
 >
 >       		s - 当前最佳间隔的长度。
 >
@@ -288,7 +288,7 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 > 4. 在步骤 2 和 3 中，我们已经证明了 $r$ 和 $s$ 是独立的，因为没有函数 $g_1$ 和 $g_2$ 使得 $s=g_1(r)$ 或 $r=g_2(s)$。这显然不意味着没有参数 $x$ 和函数 $y_s$ 和 $y_r$ 使得 $s=y_s(x)$ 和 $r=y_r(x)$。
 >
-> 5. 可以看出，$r$ 和 $s$ 足以计算最佳重复间隔(参见方程式(1)及(2))。让我们首先假设以下两个函数 $f_r$ 和 $f_s$ 在s涉及记忆存储i的系统中是已知的：$r_i=f_r(s_i)$ 和 $s_i=f_s(s_{i-1})$。在我们的例子中，这些函数具有平凡的形式 $f_r：r_i=s_i$ 和 $f_s：s_i=s_{i-1}*C_2$ (其中 $C_2$ 是等式中的常量。(2)。在这种情况下，变量 $r$ 和 $s$ 足以在任何时刻 $t$ 以最佳重复间隔表示记忆。以下是重复间隔算法，它表明这是正确的：
+> 5. 可以看出，$r$ 和 $s$ 足以计算最佳重复间隔(参见方程式(1)及(2))。让我们首先假设以下两个函数 $f_r$ 和 $f_s$ 在s涉及记忆存储i的系统中是已知的：$r_i=f_r(s_i)$ 和 $s_i=f_s(s_{i-1})$。在我们的例子中，这些函数具有平凡的形式 $f_r：r_i=s_i$ 和 $f_s：s_i=s_{i-1}*C_2$ (其中 $C_2$ 是公式中的常量。(2)。在这种情况下，变量 $r$ 和 $s$ 足以在任何时刻 $t$ 以最佳重复间隔表示记忆。以下是重复间隔算法，它表明这是正确的：
 >
 >    1. 假设变量 $r_i$ 和 $s_i$ 描述第 i 次重复后的记忆状态
 >    2. 时间流逝 $r_i$
@@ -323,7 +323,7 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 >
 > The relationship between the stability after the i-th repetition ($S_i$) and the constants $C_1$ and $C_2$ determining the optimum spacing of repetitions as defined by Eqns. (1) and (2) can therefore be written as:
 >
-> 第 i 次重复后的稳定性($S_i$)与确定公式定义的最佳重复间隔的常数 $C_1$ 和 $C_2$ 之间的关系。因此，(1)和(2)可以写成：
+> 因此，第 i 次重复后的稳定性($S_i$)与确定由公式(1)和(2)定义的最佳重复间隔的常数 $C_1$ 和 $C_2$ 之间的关系可以写成：
 >
 >    > (6) $S_i=-(C_1*C_2^{i-1})/\ln(K)$
 >
@@ -354,7 +354,7 @@ Here is an improved proof by [Murakowski](https://supermemo.guru/wiki/Janusz_Mur
 
 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) has always been based on the [two component model of memory](https://supermemo.guru/wiki/Two_component_model_of_memory), which emerged in an increasingly explicit form over the last three decades. The constant $C_2$ in Eqn. (2) in Murakowski proof above represents [stability increase](https://supermemo.guru/wiki/Stability_increase). In 2018, stability increase is represented in [SuperMemo](https://supermemo.guru/wiki/SuperMemo) as matrix *SInc[]*. $C_2$ says how much inter-repetition intervals should increase in learning to meet the criteria of admissible level of forgetting. In reality, $C_2$ is not a constant. It depends on a number of factors. Of these, the most important are:
 
-SuperMemo 一直基于记忆的双组分模型，该模型在过去 30 年中以越来越明显的形式出现。等式(2) 中的常数 $C_2$ 在 Murakowski 的上述证明中表示稳定性增加。2018 年，稳定性增加在 SuperMemo 中表示为矩阵 SInc[]。$C_2$ 说明在学习中应该增加多少重复间隔，才能达到可接受的遗忘水平标准。实际上，$C_2$ 不是常数。这取决于许多因素。其中，最重要的是：
+SuperMemo 一直基于记忆的双组分模型，该模型在过去 30 年中以越来越明显的形式出现。公式(2) 中的常数 $C_2$ 在 Murakowski 的上述证明中表示稳定性增加。2018 年，稳定性增加在 SuperMemo 中表示为矩阵 SInc[]。$C_2$ 说明在学习中应该增加多少重复间隔，才能达到可接受的遗忘水平标准。实际上，$C_2$ 不是常数。这取决于许多因素。其中，最重要的是：
 
 - item difficulty (D)(see: [complexity](https://supermemo.guru/wiki/Complexity)): the more difficult the remembered piece of information the smaller the $C_2$ (i.e. difficult material must be reviewed more often)
 - [memory stability](https://supermemo.guru/wiki/Memory_stability) (S): the more lasting/durable the memory, the smaller the $C_2$ value
@@ -387,6 +387,6 @@ Here is the evolution of [stability increase](https://supermemo.guru/wiki/Stabil
 - in [SuperMemo 6](https://supermemo.guru/wiki/SuperMemo_6) (1991), $C_2$ in the form of the [O-Factor matrix](https://supermemo.guru/wiki/O-Factor_matrix) would be derived from a three-dimensional matrix that would include the [retrievability](https://supermemo.guru/wiki/Retrievability) dimension. The important implication of the third dimension was that, for the first time, [SuperMemo](https://supermemo.guru/wiki/SuperMemo) would make it possible to inspect [forgetting curves](https://supermemo.guru/wiki/Forgetting_curve) for different levels of [difficulty](https://supermemo.guru/wiki/Difficulty) and [memory stability](https://supermemo.guru/wiki/Stability)
 - 在 [SuperMemo 6](https://supermemo.guru/wiki/SuperMemo_6)(1991) 中，$C_2$ 以 [O-因子矩阵](https://supermemo.guru/wiki/O-Factor_matrix)的形式派生自一个包含可提取性维度的三维矩阵。第三维度的重要意义是，[SuperMemo](https://supermemo.guru/wiki/SuperMemo) 第一次使检查不同难度和记忆稳定性的遗忘曲线成为可能
 - in [SuperMemo 8](https://supermemo.guru/wiki/SuperMemo_8) (1997) through [SuperMemo 16](http://www.super-memo.com/supermemo16.html), the representation of $C_2$ would not change much, however, the algorithm used to produce a quick and stable transition from the theoretical to the real set of data would gradually get more and more complex. Most importantly, new SuperMemos make a better use of the [retrievability](https://supermemo.guru/wiki/Retrievability) dimension of $C_2$. Thus, independent of the [spacing effect](https://supermemo.guru/wiki/Spacing_effect), the student can depart from the initial learning criteria, e.g. to cram before an exam, without introducing noise into the optimization procedure
-- 在[SuperMemo 8](https://supermemo.guru/wiki/SuperMemo_8)(1997) 到 [SuperMemo 16](http://www.super-memo.com/supermemo16.html) 中，$C_2$ 的表示没有有太大变化，但是，用于产生从理论数据到真实数据的快速而稳定的转换的算法将逐渐变得越来越复杂。最重要的是，新的 SuperMemo 更好地利用了 $C_2$ 的可提取性性维度。因此，与间隔效应无关，学生可以偏离初始学习标准，例如在考试前临时抱佛脚，而不会在优化过程中引入噪声
+- 在 [SuperMemo 8](https://supermemo.guru/wiki/SuperMemo_8)(1997) 到 [SuperMemo 16](http://www.super-memo.com/supermemo16.html) 中，$C_2$ 的表示没有有太大变化，但是，用于产生从理论数据到真实数据的快速而稳定的转换的算法将逐渐变得越来越复杂。最重要的是，新的 SuperMemo 更好地利用了 $C_2$ 的可提取性性维度。因此，与间隔效应无关，学生可以偏离初始学习标准，例如在考试前临时抱佛脚，而不会在优化过程中引入噪声
 - in [SuperMemo 17](https://supermemo.guru/wiki/SuperMemo_17) (2016), $C_2$ finally took the form based on the original [two component model of memory](https://supermemo.guru/wiki/Two_component_model_of_memory). It is taken from [stability increase](https://supermemo.guru/wiki/Stability_increase) matrix (SInc) that has three dimensions that represent the three variables that determine the increase in stability: [complexity](https://supermemo.guru/wiki/Complexity), [stability](https://supermemo.guru/wiki/Stability) and [retrievability](https://supermemo.guru/wiki/Retrievability). The SInc matrix is filled up with data during learning using a complex algorithm known as [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17). The stability increase matrix can be inspected in SuperMemo 17 with **Tools : Memory : 4D Graphs** (**Stability** tab)
-- 在 [SuperMemo 17](https://supermemo.guru/wiki/SuperMemo_17) (2016) 中，$C_2$ 最终采取了基于最初的记忆双组分模型的形式。它取自稳定性增加矩阵(SINC)，该矩阵具有三个维度，表示决定稳定性增加的三个变量：复杂性、稳定性和可提取性。在使用称为算法 SM-17 的复杂算法学习期间用数据填充 SINC 矩阵。可使用 **Tools：Memory：4D Graphs** (**稳定性** 选项卡)在 SuperMemo 17 中检查稳定性增加矩阵。
+- 在 [SuperMemo 17](https://supermemo.guru/wiki/SuperMemo_17) (2016) 中，$C_2$ 最终采取了基于最初的记忆双组分模型的形式。它取自稳定性增加矩阵(SInc)，该矩阵具有三个维度，表示决定稳定性增加的三个变量：复杂性、稳定性和可提取性。在使用称为算法 SM-17 的复杂算法学习期间用数据填充 SInc 矩阵。可使用 **Tools：Memory：4D Graphs** (**稳定性** 选项卡)在 SuperMemo 17 中检查稳定性增加矩阵。
